<resources>
    <string name="app_name">GPS_TEST</string>
    <string name="title_activity_driving_style_detect">DrivingStyleDetect</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="Text_motion0">ACCELERATION:</string>
    <string name="Text_motion1">BEARING:</string>
    <string name="Text_motion2">DISTANCE:</string>
    <string name="Text_motion3">SPEED:</string>
    <string name="Text_motion4">LON,LAT:</string>
    <string name="Text_title">DrivingEventDetect</string>
    <string name="Text_Subtitle1">转弯情况:</string>
    <string name="Text_Subtitle2">制动情况:</string>

</resources>